@@ -276,10 +276,11 @@ if ($requested_reinstall and not $reverse_rebuild and not $mass_rebuild and not 
 # get lists of installed packages and perl modules from CPAN
 my $inst_pkgs = get_installed_packages('ALL');
 my $std_pkgs = get_installed_packages('STD');
-my $pms;
+my ($pms, $defective);
 unless ($config{CPAN_IGNORE} eq "TRUE") {
-	$pms = get_installed_cpans();
+	($pms, $defective) = get_installed_cpans();
 	s/::/-/g for @$pms;
+	s/::/-/g for @$defective;
 }
 my (%inst_names, %std_names);
 $inst_names{$_->{name}} = $_ for @$inst_pkgs;
@@ -355,6 +356,11 @@ FIRST: for my $sbo (@$build_queue) {
 				if ($pm =~ /^$pm_name$/i) {
 					say "$sbo installed via the CPAN.";
 					next FIRST;
+				}
+			}
+			for my $pm (@$defective) {
+				if ($pm =~ /^$pm_name$/i) {
+					wrapsay "$sbo installed via the CPAN, but file(s) missing.";
 				}
 			}
 		}
